--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 
 <script>
 
-// --- Data (plan + nutrition) ---
+// --- Data (plan + nutrition) ---<!-- rebuild -->
+
 const PLAN = [
 {
   day: 1,
